feat: JWT RSA 非对称密钥 + Token 吊销 + 文件模块重构 + 品牌定位对齐
- security: JWT HMAC 对称密钥 → RSA 非对称密钥对，SecurityConfig 使用 NimbusJwtDecoder/Encoder + JWKSource\n- security: 新增 TokenRevocationFilter，Redis 黑名单吊销检查，包装 AnonymousAuthenticationFilter 链\n- config: JwtProperties 从 secretKey 改造为 privateKeyLocation/publicKeyLocation 指向 PEM 文件路径\n- refactor(FileController): 移除旧 MultiFileUpload 支持，提取 ImageQueryService，精简 259→67 行\n- refactor(ImageProcessingService): 减少 199 行，移除冗余异常处理与过时的方法重载\n- refactor(GlobalExceptionHandler): 删除 dead code（forbidden/response 辅助方法），简化 switch 模式匹配\n- refactor(SecurityConfig): 移除手写 JWT Filter，全部委托 Spring Security oauth2ResourceServer + AnonymousAuthenticationFilter 链\n- refactor(LocalRateLimiter): 令牌桶重构，简化并发控制\n- feat(keys): 新增 keys/generate-rsa-keypair.sh 生成开发环境 RSA 密钥对\n- docs: ADR/AGENTS.md/CHANGELOG 同步项目定位 'LLM × DDD 工程化实战'\n- ui: HeroSection 同步新品牌 tagline，Footer 同步 copyright 年份，CSS 清理